--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,12 +2,21 @@ name: Go
 on: [push]
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        os: [macos-latest, windows-latest, ubuntu-latest]
+
     steps:
       - uses: actions/setup-go@v4
         with:
           go-version: 1.21
       - uses: actions/checkout@v4
-      - run: |
-          go run github.com/ysmood/golangci-lint@latest
-          go test ./...
+
+      - name: lint
+        run: go run github.com/ysmood/golangci-lint@latest
+        if: matrix.os == 'ubuntu-latest'
+
+      - name: test
+        run: go test ./...
