--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,6 +1,3 @@
-run:
-  skip-dirs-use-default: false
-
 linters:
   enable-all: true
   disable:
@@ -22,18 +19,12 @@ linters:
     - forcetypeassert
     - gci
     - depguard
+    - mnd
 
-    # Deprecated ones:
-    - structcheck
-    - interfacer
-    - deadcode
-    - varcheck
-    - ifshort
-    - exhaustivestruct
-    - golint
-    - maligned
-    - nosnakecase
-    - scopelint
+    - execinquery
+    - copyloopvar
+    - exportloopref
+    - copyloopvar
 
 linters-settings:
   gocyclo:
@@ -44,8 +35,6 @@ linters-settings:
     lines: 100
 
 issues:
-  exclude-use-default: false
-
   exclude-rules:
     - path: main.go
       linters:
