--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,41 +1,1 @@
-linters:
-  enable-all: true
-  disable:
-    - gochecknoinits
-    - paralleltest
-    - wrapcheck
-    - gosec
-    - gochecknoglobals
-    - musttag
-    - revive
-    - gomnd
-    - wsl
-    - exhaustruct
-    - ireturn
-    - nonamedreturns
-    - varnamelen
-    - stylecheck
-    - nlreturn
-    - forcetypeassert
-    - gci
-    - depguard
-    - mnd
-
-    - execinquery
-    - copyloopvar
-    - exportloopref
-    - copyloopvar
-
-linters-settings:
-  gocyclo:
-    min-complexity: 15
-  cyclop:
-    max-complexity: 15
-  funlen:
-    lines: 100
-
-issues:
-  exclude-rules:
-    - path: main.go
-      linters:
-        - forbidigo
+version: "2"
